# Quote_Manager_CLI_Peter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
Quote_Manager_CLI_Peter/: pyproject.toml
Quote_Manager_CLI_Peter/.github/workflows/: ci.yml
Quote_Manager_CLI_Peter/src/: cli.py  database.py  logger_config.py  models.py  utils.py
Quote_Manager_CLI_Peter/tests/: test_cli.py  test_database.py  test_logger_config.py  test_utils.py
quote_manager_cli_peter/: cli.py  models.py  utils.py
tests/: test_cli.py  test_database.py  test_logger_config.py  test_utils.py
