[tool.poetry]
name = "quote-manager-cli-peter"
version = "0.1.0"
description = "A CLI tool for managing quotes, including adding, listing, generating random quotes, and initializing the database with quotes from a JSON file."
authors = ["Peter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
sqlalchemy = "^1.4.25"
pytest = "^8.3.2"
decouple = "^0.0.7"
duckdb = "0.8.1"
duckdb-engine = "^0.13.1"
flake8 = "^7.1.1"
black = "^24.8.0"
requests = "^2.32.3"
isort = "5.12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.scripts]
quote = "quote_manager_cli_peter.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
