[tool.poetry]
name = "src"
version = "0.1.0"
description = "A CLI to manage quotes"
authors = ["Peter Adekolu <peter@example.com>"]



[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
sqlalchemy = "^1.4.25"
pytest = "^8.3.2"
decouple = "^0.0.7"
duckdb = "0.8.1"
duckdb-engine = "^0.13.1"

[tool.poetry.scripts]
quote = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
